--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
 # Created by http://www.gitignore.io
 
+### Windows ###
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+
 ### Eclipse ###
 *.pydevproject
 .metadata
@@ -46,4 +64,3 @@ local.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
