--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="/Users/samov004/Software/testng-6.8.8.jar"/>
+	<classpathentry kind="lib" path="/Users/samov004/Software/selenium-server-standalone-2.42.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
