--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,12 @@
-# Created by http://www.gitignore.io
-
-### Java ###
+### Java
 *.class
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+### Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
 
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-/target/
+# Help - http://www.gitignore.io
