--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
       <scope>test</scope>
     </dependency>
     
-    <!-- External dependencies -->
+    <!-- Dependencies -->
     <dependency>
       <groupId>testng</groupId>
        <artifactId>testng</artifactId>
@@ -53,11 +53,15 @@
       <artifactId>selenium-htmlunit-driver</artifactId>
       <version>2.42.2</version>
     </dependency>
-    <!-- HttpClient -->
     <dependency>
       <groupId>commons-httpclient</groupId>
       <artifactId>commons-httpclient</artifactId>
       <version>3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-all</artifactId>
+      <version>1.3</version>
     </dependency>
   </dependencies>
 </project>
