--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-### Java
+### Java ###
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -12,7 +12,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-### Maven
+### Maven ###
 target/
 pom.xml.tag
 pom.xml.releaseBackup
