--- a/pom.xml
+++ b/pom.xml
@@ -64,5 +64,10 @@
             <artifactId>hamcrest-all</artifactId>
             <version>1.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <version>3.3</version>
+        </dependency>
     </dependencies>
 </project>
