--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
                     <target/>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.9</version>
+            </plugin>
         </plugins>
     </build>
     
@@ -68,6 +73,7 @@
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
             <version>3.3</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
