--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>java-technologies</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>java-technologies</name>
+    <properties>
+        <java.version>1.7</java.version>
+    </properties>
     
     <!-- Build -->
     <build>
@@ -28,8 +31,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source/>
-                    <target/>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
             <plugin>
