--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,15 @@
     <name>java-technologies</name>
     <properties>
         <java.version>1.7</java.version>
+        <json.version>1.1</json.version>
+        <junit.version>4.12</junit.version>
+        <hamcreast.version>1.3</hamcreast.version>
+        <testng.version>6.8</testng.version>
+        <selenium.firefox.version>2.42.2</selenium.firefox.version>
+        <selenium.htmlunit.version>2.42.2</selenium.htmlunit.version>
+        <httpclient.version>3.1</httpclient.version>
+        <easymock.version>3.3</easymock.version>
+        <hadoop.mapreduce.version>2.6.0</hadoop.mapreduce.version>
     </properties>
     
     <!-- Build -->
@@ -56,44 +65,49 @@
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
-            <version>1.1</version>
+            <version>${json.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
-            <version>1.3</version>
+            <version>${hamcreast.version}</version>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.8</version>
+            <version>${testng.version}</version>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-firefox-driver</artifactId>
-            <version>2.42.2</version>
+            <version>${selenium.firefox.version}</version>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-htmlunit-driver</artifactId>
-            <version>2.42.2</version>
+            <version>${selenium.htmlunit.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
-            <version>3.1</version>
+            <version>${httpclient.version}</version>
         </dependency>
         <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
-            <version>3.3</version>
+            <version>${easymock.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-mapreduce-client-core</artifactId>
+            <version>${hadoop.mapreduce.version}</version>
         </dependency>
     </dependencies>
 </project>
