Update pom and add Dockerfile

--- a/pom.xml
+++ b/pom.xml
@@ -128,5 +128,11 @@
             <artifactId>hadoop-common</artifactId>
             <version>${hadoop.common.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.10</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
