--- a/pom.xml
+++ b/pom.xml
@@ -141,5 +141,11 @@
             <artifactId>spark-core_2.11</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <!-- logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.22</version>
+        </dependency>
     </dependencies>
 </project>
